# tokio-openai

./: .gitignore  Cargo.toml  README.md
src/: ext.rs  lib.rs  speech.rs  util.rs
