[package]
name = "tokio-openai"
version = "3.1.3"
edition = "2021"
description = "tokio support for OpenAI API"
repository = "https://github.com/andrewgazelka/tokio-openai"
license = "MIT"

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.28"
serde_json = "1.0"
tokio = { version = "1.33", features = ["full"] }
derive_more = "0.99.17"
derive-build = "0.1.1"
schemars = "0.8.15"
tokio-util = { version = "0.7.10", features = ["compat"] }

[dev-dependencies]
once_cell = "1.18"
regex = "1.10.2"
pretty_assertions = "1.4.0"
approx = "0.5.1"
